--- a/euphrosyne/assets/css/components/nav.css
+++ b/euphrosyne/assets/css/components/nav.css
@@ -24,7 +24,7 @@
     flex: 1;
     display: flex;
     font-size: 16px;
-    color: var(--default-grey);
+    color: var(--g-100);
     padding: 16px;
     align-items: center;
     border-left: 2px solid transparent; /* to avoid moving during hovering */
@@ -51,7 +51,7 @@
 
 .sidebar a.sidebar-link[aria-current], 
 .sidebar a.sidebar-link:hover {
-    background-color: var(--fill-grey);
+    background-color: #6A6A6A;
     border-left: 2px solid #F0F0F0;
 }
 
